# openscad-step-reader

./: .gitignore  CMakeLists.txt  README.md  openscad-triangle-writer.cpp  openscad-triangle-writer.h  tessellation.cpp  tessellation.h  triangle.h
.github/workflows/: build_and_release.yml
